--- a/src/App.css
+++ b/src/App.css
@@ -19,16 +19,22 @@
 
 .game-board {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 0 20px;
 }
 
 .game-card {
   display: flex;
   flex-direction: column;
-  border: 2px solid white;
+  /* border: 2px solid white; */
   justify-content: center;
-  width: 180px;
+  align-items: center;
+  /* width: 250px; */
   margin: 10px;
+  /* padding: 10px; */
   background-color: white;
+  text-align: center;
 
 }
 
@@ -36,14 +42,27 @@
   margin: 0 auto;
 }
 
+figcaption {
+  height: 50px;
+}
+
 img {
   max-width: 100%;  
+}
+
+.board {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .scoreboard {
   text-align: center;
   display: flex;
   color:white;
+  width:max-content;
+  margin: 20px 0;
+  /* margin:auto */
 }
 
 .score-divider {
